assets/css/style.css
body {
    width: 960px;
    margin: auto;
    background-image: url("../images/tweed_@2X.png");
    
}

.content {
    background-color: #ffffff;
    padding-left:30px;
    padding-right: 30px;
    min-height: 600px;
}

.header {
    overflow: hidden;
    background-color: #ffffff;
}

.header a {
    position: relative;
    font-size: 14pt;
    float: right;
    color: #4aaaa5;
    background-color: #ffffff;
    border-color: #cccccc;
    text-align: right;
    padding: 12px;

}

h1 {
    float: left;
    background-color: #4aaaa5;
    color: #ffffff;
    text-align: center;
    padding: 20px; 
}

h2 {
    color: #666666;
    padding-top: 10px;
    padding-bottom:10px; 
    border-bottom: 5px solid #666666;
}

.header-right {
    float:right;
    padding: 12px;
}



p 
{
    padding: 10px, 10px; 
    text-align: justify;
    font-family: Arial, Helvetica, sans-serif;
    color: #666666;
    line-height: 1.3;

}

.link {color:#4aaaa5;}

.link:hover { color: #6aece5}

/*Contact Page Form*/
form
    {font-family: Arial, Helvetica, sans-serif;
    color: #666666;
}

input[type=text] {
    border: 2px solid #666666;
    border-radius: 2px;
    width: 600px;
}

textarea {
    border: 2px solid #666666;
    border-radius: 2px;
    width: 600px;
    height: 200px;
}

/*Text box on images*/



.text-block {
    position: absolute;
    bottom: 5px;
    background-color: #4aaaa5;
    color: #ffffff;
    padding: 10px;
}


/*Footer on all pages*/
footer
{
    position: sticky;
    background-color: #666666;
    color: #ffffff;
    padding: 15px;
    text-align: center;
    border-top: 8px solid #4aaaa5;

    
}
 

